--- a/css/styles.css
+++ b/css/styles.css
@@ -93,4 +93,37 @@ address li a {
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
   color: var(--text-color);
+  text-decoration: none;
+}
+.section-first {
+  padding: 188px 0;
+  background-color: var(--text-color);
+  display: flex;
+  flex-direction: column;
+}
+.section-first-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.slogan {
+  max-width: 496px;
+  font-size: 56px;
+  font-weight: 700;
+  line-height: 60px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
+  color: var(--white-text-color);
+}
+.button {
+  display: block;
+  margin: 0 auto;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  cursor: pointer;
 }
