--- a/css/styles.css
+++ b/css/styles.css
@@ -94,6 +94,7 @@ address li a {
   text-decoration-skip-ink: none;
   color: var(--text-color);
   text-decoration: none;
+  font-style: normal;
 }
 .section-first {
   padding: 188px 0;
@@ -126,4 +127,21 @@ address li a {
   background-color: #4d5ae5;
   border-radius: 4px;
   cursor: pointer;
+}
+.section-second {
+  padding: 120px 0;
+}
+.visually-hidden {
+  display: inline-block;
+}
+.parag-ul {
+  display: flex;
+  gap: 24px;
+  flex-direction: column;
+}
+.parag-li {
+  width: calc((100% - 72px) / 4);
+}
+.parag {
+  margin-bottom: 8px;
 }
