--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,6 @@ address li a {
   width: 264px;
 }
 .parag {
-  margin-bottom: 8px;
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
@@ -161,4 +160,7 @@ address li a {
   text-align: left;
   text-underline-position: from-font;
   text-decoration-skip-ink: none;
+}
+.parag-li-h3 {
+  margin-bottom: 8px;
 }
