--- a/css/styles.css
+++ b/css/styles.css
@@ -165,3 +165,28 @@ address li a {
 .parag-title {
   margin-bottom: 8px;
 }
+.section-third {
+  padding: 120px 0;
+}
+.title-team {
+  margin-bottom: 72px;
+}
+.team-ul {
+  display: flex;
+  gap: 24px;
+}
+.team-li {
+  width: calc((100% - 72px) / 4);
+  list-style: none;
+  border-radius: 0px 0px 4px 4px;
+}
+.intro {
+  padding: 32px 0;
+}
+.bold {
+  text-align: center;
+  margin-bottom: 8px;
+}
+.text {
+  text-align: center;
+}
