--- a/css/styles.css
+++ b/css/styles.css
@@ -167,18 +167,33 @@ address li a {
 }
 .section-third {
   padding: 120px 0;
+  background-color: var(--team-background);
+}
+.section-third-container {
+  display: flex;
+  flex-direction: column;
 }
 .title-team {
   margin-bottom: 72px;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
 }
 .team-ul {
   display: flex;
   gap: 24px;
+  margin: 0;
+  padding: 0;
 }
 .team-li {
   width: calc((100% - 72px) / 4);
   list-style: none;
   border-radius: 0px 0px 4px 4px;
+  background-color: var(--white-background-color);
 }
 .intro {
   padding: 32px 0;
