--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ address li a {
   background-color: #4d5ae5;
   border-radius: 4px;
   cursor: pointer;
+  color: var(--white-text-color);
 }
 .section-second {
   padding: 120px 0;
@@ -204,4 +205,37 @@ address li a {
 }
 .text {
   text-align: center;
+}
+.section-fourth {
+  padding: 120px 0;
+}
+.section-fourth-container {
+  display: flex;
+  flex-direction: column;
+}
+.title-portfolio {
+  margin-bottom: 72px;
+}
+.port-ul {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
+}
+.img-li {
+  list-style: none;
+  width: calc((100% - 48px) / 3);
+}
+.img-li h3,
+.img-li p {
+  text-align: left;
+}
+.title-portfolio {
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+  text-align: center;
+  text-underline-position: from-font;
+  text-decoration-skip-ink: none;
 }
